nbbank/demo/istio-ingress/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  labels: 
    app: grafana-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: app
spec:
  rules:
  - host: www.grafana.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
